--- a/TimeComponent.razor
+++ b/TimeComponent.razor
@@ -38,7 +38,7 @@
     <tr>
         <td width="@Column1Width">
             <Label Name="LabelComponent" Parent="this" Caption="@Caption" Left="@LabelLeft" 
-                FontSize="@LabelFontSize" FontName="@LabelFontName" ZIndex="60"
+                FontSize="@LabelFontSize" FontName="@LabelFontName" ZIndex="60" TextAlign="right"
                 Top=@LabelTop Width="80" TextColor="@LabelColor.Name"></Label>
         </td>        
         <td width="@HoursTextBoxWidth">
@@ -47,13 +47,13 @@
                 Column2Width="@HoursTextBoxWidthPlus4" Width="@HoursTextBoxWidth"
                 OnTextChangedCallback="ValidateHours" HandleChangeOption="HandleChangeEnum.OnChange"
                 TextBoxWidth="@HoursTextBoxWidth" Left="@HoursTextBoxLeft" FontSize="@FontSize"
-                FontName="@FontName"
+                FontName="@FontName" Top="@TextBoxTop"
                 Display="inline-block" ZIndex="20" Parent="this" TabIndex="1">
             </TextBoxComponent>
         </td>
         <td width="4">
             <TextBoxComponent Name="ColonTextBox" Column1Width="0" Parent="this" 
-                Left="@MinutesTextBoxLeftPlus3" Column2Width="4"
+                Left="@ColonTextBoxLeft" Column2Width="4" Top="@TextBoxTop"
                 FontSize="@FontSize" LabelFontName="@LabelFontName" LabelFontSize ="@LabelFontSize"
                 Width="4" TextBoxClassName="@ColonTextBoxStyle" Enabled="false" Text=":"
                 TextBoxWidth="@MinutesTextBoxWidth" Display="inline-block" FontName="@FontName"
@@ -65,7 +65,7 @@
                 Left="@HoursTextBoxLeft" Column2Width="@MinutesTextBoxWidth" FontSize="@FontSize"
                 Width="@MinutesTextBoxWidth" TextBoxClassName="@MinutesTextBoxStyle"
                 TextBoxWidth="@MinutesTextBoxWidth" Display="inline-block" Caption=""
-                TextBoxFontSize="@FontSize" TextBoxFontName="@FontName"
+                TextBoxFontSize="@FontSize" TextBoxFontName="@FontName" Top="@TextBoxTop"
                 OnTextChangedCallback="ValidateMinutes" HandleChangeOption="HandleChangeEnum.OnChange"
                 ShowCaption="false" ZIndex="40" TabIndex="2" SendAllTextToParent="true">
             </TextBoxComponent>
