I added FontName to the ImageButton

--- a/ImageButton.razor
+++ b/ImageButton.razor
@@ -28,6 +28,7 @@
 </Styled>
 <Styled @bind-Classname=@ButtonTextStyle>
     text-align: @ButtonTextAlign;
+    font-family: @FontName;
     font-size: @FontSizeStyle;
 </Styled>
 
