ClassName is now used on the TextBox. BorderColor is now default color gray on TextBox and AllowWrapping replaces hard coded textdonot wrap.

--- a/TextBoxComponent.razor
+++ b/TextBoxComponent.razor
@@ -71,7 +71,7 @@
 
 @if (Visible)
 {  
-    <div class="@TextBoxControlStyle textdonotwrap">
+    <div class="@TextBoxControlStyle @ClassName @TextWrapping">
         @if (ShowCaption)
         {
             <div class="@Column1Style">
