I added a property LabelTextAlign to the TextBox

--- a/TextBoxComponent.razor
+++ b/TextBoxComponent.razor
@@ -9,12 +9,11 @@
     color: @LabelColor;
     font-size: @LabelFontSizeStyle;
     font-family: @LabelFontName;
-    text-align: right;
+    text-align: @LabelTextAlign;
     width: @Column1WidthStyle;
     position: @Position;
     top: @LabelTopStyle;
-    left: @LabelLeftStyle;
-    justify-content: left;
+    left: @LabelLeftStyle;    
 </Styled>
 <Styled @bind-Classname=@Column2Style>
     position: @Position;
