I changed up the ImageButton to fix width not working.

--- a/ImageButton.razor
+++ b/ImageButton.razor
@@ -8,7 +8,9 @@
     display: inline-block;
     outline: none;
     border: none;
-    width: @WidthStyle;
+    width: auto;
+    margin: 0px;
+    padding: 0px;
 </Styled>
 <Styled @bind-Classname=@ButtonStyle>
     background-image: url('@ImageUrl');
@@ -25,6 +27,8 @@
     white-space: nowrap;    
     color: @TextColorName;
     vertical-align: central;
+    margin: 0px;
+    padding: 0px;
 </Styled>
 <Styled @bind-Classname=@ButtonTextStyle>
     text-align: @ButtonTextAlign;
