ClassName was not being used in the ImageButton.

--- a/ImageButton.razor
+++ b/ImageButton.razor
@@ -56,7 +56,7 @@
 
 @if (Visible)
 {
-    <div class="@ButtoncontainerStyle">
+    <div class="@ButtoncontainerStyle @ClassName">
         <button class="imagebutton @ButtonStyle" @onclick="ButtonClicked" title="@Title">
             <span class="@ButtonTextStyle">@Text</span>
         </button>    
