--- a/ImageButton.razor
+++ b/ImageButton.razor
@@ -31,6 +31,9 @@
     padding: 0px;
 </Styled>
 <Styled @bind-Classname=@ButtonTextStyle>
+    position: @Position;
+    left: @TextOffsetXStyle;
+    top: @TextOffsetYStyle;
     text-align: @TextAlign;
     font-family: @FontName;
     font-size: @FontSizeStyle;
