I renamed OffsetX and OffsetY to OffSetX and OffSetY. Just looks better.

--- a/ImageButton.razor
+++ b/ImageButton.razor
@@ -32,8 +32,8 @@
 </Styled>
 <Styled @bind-Classname=@ButtonTextStyle>
     position: @Position;
-    left: @TextOffsetXStyle;
-    top: @TextOffsetYStyle;
+    left: @TextOffSetXStyle;
+    top: @TextOffSetYStyle;
     text-align: @TextAlign;
     font-family: @FontName;
     font-size: @FontSizeStyle;
