--- a/Grid.razor
+++ b/Grid.razor
@@ -62,7 +62,7 @@
                             {
                                 <ImageButton ClickHandler=@ButtonClickHandler Unit="@column.Unit" ImageUrl="@column.ButtonUrl" 
                                 Width="@column.Width" Height="@column.Height" ButtonNumber=@column.ButtonNumber Name="Button"
-                                ButtonText="@column.ColumnText" Visible=true Parent="this"></ImageButton>
+                                Text="@column.ColumnText" Visible=true Parent="this"></ImageButton>
                             }
                             else if ((row.EditMode) && (!column.ReadOnly) && (column.EditMode))
                             {
