--- a/CalendarComponent.razor
+++ b/CalendarComponent.razor
@@ -289,7 +289,7 @@
                 LabelFontSize="@LabelFontSize" LabelFontName="@LabelFontName"
                 TextBoxFontSize="@TextBoxFontSize" TextBoxFontName="@TextBoxFontName"
                 Width="@Width" Height="@TextBoxHeight" LabelClassName="@LabelClassName" 
-                ZIndex="@ZIndexPlus20" Left="@TextBoxLeft">
+                ZIndex="@ZIndexPlus20" Left="@TextBoxLeft" Top="@TextBoxTop">
             </TextBoxComponent>
             </td>
             <td width="@ButtonWidth">
