--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -88,14 +88,14 @@
         <tr class="textdonotwrap">
             <td width="@TextBoxWidth">
                 <TextBoxComponent Name="DisplayTextBox" Caption="@LabelText" Parent="this" 
-                ClassName="displayinline" Column1Width="@Column1Width" 
-                LabelLeft="@LabelLeft" LabelTop="@labelTop" NotifyParentOnBlur="@NotifyParentOnBlur"
-                Column2Width="@Column2Width" TextBoxWidth="@TextBoxWidth" Height="@TextBoxHeight"
-                LabelFontName="@LabelFontName" LabelFontSize ="@LabelFontSize" Left="@TextBoxLeft"
-                LabelColor="@LabelColor.Name" OnTextChangedCallback="OnTextChanged"
-                TextBoxFontSize="@TextBoxFontSize" TextBoxFontName="@TextBoxFontName"
-                SendAllTextToParent=true Text="@SelectedText" Enabled="@TextBoxEnabled"
-                Width="@Width" LabelClassName="@LabelClassName" ZIndex="@ZIndexPlus20">
+                    ClassName="displayinline" Column1Width="@Column1Width" 
+                    LabelLeft="@LabelLeft" LabelTop="@labelTop" NotifyParentOnBlur="@NotifyParentOnBlur"
+                    Column2Width="@Column2Width" TextBoxWidth="@TextBoxWidth" Height="@TextBoxHeight"
+                    LabelFontName="@LabelFontName" LabelFontSize ="@LabelFontSize" Left="@TextBoxLeft"
+                    LabelColor="@LabelColor.Name" OnTextChangedCallback="OnTextChanged" Top="@TextBoxTop"
+                    TextBoxFontSize="@TextBoxFontSize" TextBoxFontName="@TextBoxFontName"
+                    SendAllTextToParent=true Text="@SelectedText" Enabled="@TextBoxEnabled"
+                    Width="@Width" LabelClassName="@LabelClassName" ZIndex="@ZIndexPlus20">
                 </TextBoxComponent>
             </td>
             @if (ShowButton)
