I fixed the ComboBox and Calendar Buttons. The Button needs to be in front of the TextBox.

--- a/CalendarComponent.razor
+++ b/CalendarComponent.razor
@@ -41,7 +41,7 @@
     display: inline;        
     text-align: left;    
     background-size: 100% 100%;
-    z-index: @ZIndex;
+    z-index: @ZIndexPlus30;
     height: 25.6px;    
 </Styled>
 <Styled @bind-Classname=@NavButtonStyle>
