--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -55,7 +55,7 @@
     left: @ButtonLeftStyle;
     top: @ButtonTopStyle;
     cursor: pointer;
-    z-index: @ZIndex;
+    z-index: @ZIndexPlus30;
 </Styled>
 <Styled @bind-Classname=@CheckedListBoxStyle>   
     position: @CheckedListPosition;
