--- a/CalendarComponent.razor
+++ b/CalendarComponent.razor
@@ -290,9 +290,11 @@
             </TextBoxComponent>
             </td>
             <td width="@ButtonWidth">
-                <ImageButton ClassName="@ButtonStyle" ButtonNumber="1" HeightUnit="px" Height="@ButtonHeight" 
-                    Unit="px" Width="@ButtonWidth"  Name="CalendarButton" Position="relative" ZIndex="@ZIndexPlus30"
-                    Left="@ButtonLeft" Top=@ButtonTop  ImageUrl="@ButtonUrl" Parent="this" ClickHandler="@ButtonClicked">
+                <ImageButton ClassName="@ButtonStyle" ButtonNumber="1" HeightUnit="px" 
+                    Height="@ButtonHeight" Unit="px" Width="@ButtonWidth"  Name="CalendarButton" 
+                    Position="relative" ZIndex="@ZIndexPlus30" Left="@ButtonLeft" Top=@ButtonTop  
+                    BorderColor="@ButtonBorderColor" BorderWidth="@ButtonBorderWidth"
+                    ImageUrl="@ButtonUrl" Parent="this" ClickHandler="@ButtonClicked">
                 </ImageButton>
             </td>
         </tr>
