--- a/ImageButton.razor
+++ b/ImageButton.razor
@@ -19,7 +19,7 @@
     justify-content: center;
     align-items: center;
     outline: none;
-    border: none;
+    border: @BorderStyle;
     background-repeat: no-repeat;
     background-color: transparent;
     width: @WidthStyle;
