I added two new properties to the ComboBox - OverfloxX and OverflowY.                   OverFlowX defaults to Hidden and OverFloxY defaults to Auto.

--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -37,7 +37,8 @@
     border-width: 1px;
     border-color: gray;
     border-style: solid;
-    overflow: visible;
+    overflow-y: @OverflowY;
+    overflow-x: @OverflowX;
 </Styled>
 <Styled @bind-Classname=@ListItemStyle>
     position: @Position;
