--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -93,7 +93,7 @@
                     LabelLeft="@LabelLeft" LabelTop="@labelTop" NotifyParentOnBlur="@NotifyParentOnBlur"
                     Column2Width="@Column2Width" TextBoxWidth="@TextBoxWidth" Height="@TextBoxHeight"
                     LabelFontName="@LabelFontName" LabelFontSize ="@LabelFontSize" Left="@TextBoxLeft"
-                    LabelColor="@LabelColor.Name" OnTextChangedCallback="OnTextChanged" Top="@TextBoxTop"
+                    LabelColor="@LabelColor" OnTextChangedCallback="OnTextChanged" Top="@TextBoxTop"
                     TextBoxFontSize="@TextBoxFontSize" TextBoxFontName="@TextBoxFontName"
                     SendAllTextToParent=true Text="@SelectedText" Enabled="@TextBoxEnabled"
                     Width="@Width" LabelClassName="@LabelClassName" ZIndex="@ZIndexPlus20">
