--- a/TextBoxComponent.razor
+++ b/TextBoxComponent.razor
@@ -6,7 +6,7 @@
     display: inline-block;
     height: 100%;
     background-color: @LabelBackgroundColor;
-    color: @LabelColor;
+    color: @LabelColor.Name;
     font-size: @LabelFontSizeStyle;
     font-family: @LabelFontName;
     text-align: @LabelTextAlign;
