--- a/ToggleComponent.razor
+++ b/ToggleComponent.razor
@@ -4,7 +4,7 @@
     display: inline-block;
     height: 100%;
     background-color: @LabelBackgroundColor;
-    color: @LabelColor;
+    color: @LabelColor.Name;
     font-size: @LabelFontSizeStyle;
     text-align: right;
     display: flex;
