I added ActualVisibleCount to the ComboBox to help hide the ScrollBar when there are no items visible yet.

--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -131,7 +131,7 @@
         else
         {      
             <div class="@ListItemContainer @DropdownClassName">
-                <select class="form-control" name="ListBox" size="@VisibleCount"
+                <select class="form-control" name="ListBox" size="@ActualVisualCount"
                         id="ComboBoxListBox" @onchange="SelectionChanged">
                     @foreach (Item item in Items)
                     {
