I switched the ComboBox to now show the Select until Loaded.

--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -129,15 +129,18 @@
             </div>                
         }
         else
-        {      
+        {
             <div class="@ListItemContainer @DropdownClassName">
-                <select class="form-control" name="ListBox" size="@ActualVisualCount"
-                        id="ComboBoxListBox" @onchange="SelectionChanged">
-                    @foreach (Item item in Items)
-                    {
-                        <option class="@ListItemStyle nopadding" >@item.Text</option>
-                    }
-                </select>
+                @if (Loaded)
+                {
+                    <select class="form-control" name="ListBox" size="@ActualVisualCount"
+                            id="ComboBoxListBox" @onchange="SelectionChanged">
+                        @foreach (Item item in Items)
+                        {
+                            <option class="@ListItemStyle nopadding" >@item.Text</option>
+                        }
+                    </select>
+                }
             </div>               
         }
     </div>
