I added a property OutlineStyle, which returns a string based on the Border if you have BorderWidth set..

--- a/ImageButton.razor
+++ b/ImageButton.razor
@@ -18,7 +18,7 @@
     display: inline-block;
     justify-content: center;
     align-items: center;
-    outline: none;
+    outline: @OutlineStyle;
     border: @BorderStyle;
     background-repeat: no-repeat;
     background-color: transparent;
